--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Naviga,Cerca, Categoria consulta il catalogo di openlibrary">
+    <meta name="description" content="Naviga,cerca e consulta il catalogo di openlibrary">
     <meta name="keywords" content="Libreria, catalogo">
     <meta name="author" content="Manuel Spoladore">
     <meta name="robots" content="index">
@@ -14,8 +14,8 @@
     
     <title>Bookshelf Lab</title>
 
-    <meta property="og:title" content="Libreria Interattiva">
-    <meta property="og:description" content="Naviga,cerca,consulta il catalogo di Openlibrary">
+    <meta property="og:title" content="Bookshelf Lab - Libreria Interattiva">
+    <meta property="og:description" content="Naviga,cerca e consulta il catalogo di Openlibrary">
     <meta property="og:image" content="https://manuelspoladore.github.io/progetto_JavaScript_Advanced_Manuel_Spoladore/assets/img/logo_url.png">
     <meta property="og:url" content="https://manuelspoladore.github.io/progetto_JavaScript_Advanced_Manuel_Spoladore/">
     <meta property="og:type" content="website">
