--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="input-group">
                 <h2 id="category-label">Scrivi una categoria</h2><br>
                 <div class="btn-input">
-                    <input id="category-box" type="text" list="options-list" name="input-with-options" placeholder="Esempio: Fantasy" aria-labelledby="category-label">
+                    <input id="category-box" type="text" name="input-with-options" placeholder="Esempio: Fantasy" aria-labelledby="category-label">
                     <input id="submit-btn" type="submit" value="Cerca">
                 </div>
             </div>                
