--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <meta property="og:title" content="Bookshelf Lab - Libreria Interattiva">
     <meta property="og:description" content="Naviga,cerca e consulta il catalogo di Openlibrary">
-    <meta property="og:image" content="https://manuelspoladore.github.io/progetto_JavaScript_advanced_manuel_spoladore/assets/dist/img/logo_url.jpg">
+    <meta property="og:image" content="https://manuelspoladore.github.io/progetto_JavaScript_advanced_manuel_spoladore/assets/dist/img/logo_url.jpg" />
     <meta property="og:url" content="https://manuelspoladore.github.io/progetto_javascript_advanced_manuel_spoladore/">
     <meta property="og:type" content="website">
     
