--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <canvas></canvas>
 
 
-<script src="dist/bundle.js"></script>
- <script type="module" src="assets/js/main.js"></script>
- <script src="assets/js/style.js"></script>
+<script src="/dist/bundle.js"></script>
+ <script type="module" src="/assets/js/main.js"></script>
+ <script src="/assets/js/style.js"></script>
 </body>
 </html>
