--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="robots" content="index">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" href="assets/dist/img/logo.png" type="image/png">
+    <link rel="icon" href="assets/img/logo.png" type="image/png">
     <meta property="og:title" content="Bookshelf Lab - Libreria Interattiva">
     <meta property="og:description" content="Naviga, cerca e consulta il catalogo di Openlibrary">
-    <meta property="og:image" content="https://manuelspoladore.github.io/Progetto_JavaScript_Advanced_Manuel_Spoladore/assets/dist/img/logo_url.jpg" />
+    <meta property="og:image" content="https://manuelspoladore.github.io/Progetto_JavaScript_Advanced_Manuel_Spoladore/assets/img/logo_url.jpg" />
     <meta property="og:url" content="https://manuelspoladore.github.io/progetto_javascript_advanced_manuel_spoladore/">
     <meta property="og:type" content="website">
     <title>Bookshelf Lab</title>
