--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <canvas></canvas>
 
 
-<script type="module" src="dist/bundle.js"></script>
+<script type="module" src="../dist/bundle.js"></script>
  <script type="module" src="./assets/js/main.js"></script>
  <script src="./assets/js/style.js"></script>
 </body>
