--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 <script src="dist/bundle.js"></script>
- <script type="module" src="./assets/js/main.js"></script>
- <script src="./assets/js/style.js"></script>
+ <script type="module" src="assets/js/main.js"></script>
+ <script src="assets/js/style.js"></script>
 </body>
 </html>
